# reflexivity

./: CMakeLists.txt  README.md
include/: reflexivity.hpp  variant_value.hpp
src/: main.cpp  reflexivity.cpp
